tests/ui/pattern/box-pattern-constructor-mismatch.stderr
error: mix of deref patterns and normal constructors
  --> $DIR/box-pattern-constructor-mismatch.rs:9:9
   |
LL |         deref!(_) => {}
   |         ^^^^^^^^^ matches on the result of dereferencing `Box<i32>`
LL |         Box { .. } => {}
   |         ^^^^^^^^^^ matches directly on `Box<i32>`
   |
   = note: this error originates in the macro `deref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

